--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,18 +2,55 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
+
+    <!-- Strings related to Initial Setup -->
+    <string name="new_user_title">Detalles del usuario</string>
+    <string name="new_user_register">Registrar</string>
+    <string name="new_user_empty_fields">Debe completar todos los campos</string>
+    <string name="no_network">Sin conexión a Internet</string>
+
+    <string name="new_user_first_name">Nombre</string>
+    <string name="new_user_last_name">Apellido</string>
+    <string name="new_user_birth_date">Fecha de nacimiento</string>
+    <string name="new_user_gender">Género</string>
+    <string-array name="new_user_gender_list">
+        <item>Masculino</item>
+        <item>Femenino</item>
+    </string-array>
+    <string-array name="new_user_gender_list_values">
+        <item>M</item>
+        <item>F</item>
+    </string-array>
+    <string name="new_user_illiterate">Analfabeto</string>
+    <string name="new_user_usertype">Tipo de usuario</string>
+    <string-array name="new_user_usertype_list">
+        <item>Sujeto</item>
+        <item>Investigador</item>
+    </string-array>
+    <string-array name="new_user_usertype_list_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+
+    <!-- Strings related to SegmentedBar -->
+    <string name="sb_empty">Vacío</string>
+    <string name="sb_value_segment">Valor actual</string>
+
+
     <!-- Strings related to Readings -->
+    <string name="readings_title">Datos en tiempo real</string>
 
     <!-- Readings -->
-    <string name="reading_no_data">No data available</string>
+    <string name="reading_no_data">No datos disponibles</string>
 
-    <string name="reading_respiratory_rate">Frecuencia Respiratoria</string>
+    <string name="reading_respiratory_rate">Frecuencia respiratoria</string>
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
 
     <string name="reading_pm1_0">PM 1.0</string>
     <string name="reading_temp">Temperatura</string>
-    <string name="reading_rel_humidity">Humedad </string>
+    <string name="reading_rel_humidity">Humedad</string>
     <string name="reading_o3">O3</string>
     <string name="reading_no2">NO2</string>
     <string name="reading_bins">Bins</string>
@@ -27,7 +64,6 @@
 
     <!-- Button/tabs menu -->
     <string name="menu_home">INICIO</string>
-    <string name="menu_health">SALUD</string>
     <string name="menu_air_quality">CALIDAD DEL AIRE</string>
     <string name="menu_graphs">GRÁFICAS</string>
     <string name="menu_settings">AJUSTES</string>
@@ -36,6 +72,7 @@
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
     <string name="action_settings">Ajustes</string>
+    <string name="action_user_profile">Perfil</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
@@ -46,45 +83,7 @@
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">Ajustes</string>
 
-    <!-- Personal Data settings -->
-    <string name="pref_header_personal_data">Datos personales</string>
-
-    <string name="pref_title_display_name">Nombre</string>
-    <string name="pref_default_display_name">Usuario</string>
-
-    <string name="pref_title_birth_date">Fecha de nacimiento</string>
-    <string name="pref_default_birth_date">1991.01.01</string>
-
-    <string name="pref_title_gender">Género</string>
-    <string-array name="pref_gender_list">
-        <item>Masculino</item>
-        <item>Female</item>
-    </string-array>
-    <string-array name="pref_gender_list_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-
-    <string name="pref_title_region">Región</string>
-    <string-array name="pref_region_list">
-        <item>Africa</item>
-        <item>Asia</item>
-        <item>Europe</item>
-        <item>Latin America</item>
-        <item>North America</item>
-    </string-array>
-    <string-array name="pref_region_list_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-    </string-array>
-
-
-    <!-- Example settings for User Interface -->
-    <string name="pref_header_ui">Interfaz de usuario</string>
-
+    <!-- Strings related to General Settings -->
     <string name="pref_category_ui_general">General</string>
 
     <string name="pref_title_font_size">Tamaño de fuente</string>
@@ -101,42 +100,64 @@
         <item>3</item>
     </string-array>
 
-    <string name="pref_title_readings_display_mode">Modo de visualización lecturas</string>
-    <string-array name="pref_readings_display_mode_list">
+    <!-- Strings related to Menu Settings -->
+    <string name="pref_category_ui_menu">Menús</string>
+
+    <string name="pref_title_menu_mode">Modo de menú</string>
+    <string-array name="pref_menu_mode_list">
+        <item>Botones</item>
+        <item>Pestañas</item>
+    </string-array>
+    <string-array name="pref_menu_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_icons_in_tabs">Habilitar iconos</string>
+    <string name="pref_description_icons_in_tabs">Mostrar iconos en pestañas</string>
+
+    <string name="pref_title_airspeck_app_access">AirSpeck</string>
+    <string name="pref_description_airspeck_app_access">Habilitar acceso a la aplicación AirSpeck</string>
+
+    <string name="pref_title_respeck_app_access">RESpeck</string>
+    <string name="pref_description_respeck_app_access">Habilitar acceso a la aplicación RESpeck</string>
+
+    <!-- Strings related to Readings Settings -->
+    <string name="pref_category_ui_readings">Lecturas de calidad del aire</string>
+
+    <string name="pref_title_readings_display_mode">Modo de visualización in la pantalla de inicio</string>
+    <string-array name="pref_readings_mode_home_screen_list">
+        <item>Listado</item>
+        <item>Gráfico: Barra</item>
+    </string-array>
+    <string-array name="pref_readings_mode_home_screen_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_readings_mode_aqreadings_screen">Modo de visualización in la pantalla de calidad del aire</string>
+    <string-array name="pref_readings_mode_aqreadings_screen_list">
         <item>Listado</item>
         <item>Gráfico: Barra</item>
         <item>Gráfico: Arco</item>
     </string-array>
-    <string-array name="pref_readings_display_mode_list_values">
+    <string-array name="pref_readings_mode_aqreadings_screen_list_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
 
-    <string name="pref_title_main_menu_layout">Diseño avanzado del menú principal</string>
-    <string name="pref_description_main_menu_layout">Habilitar menú de pestañas</string>
-
-    <string name="pref_title_icons_in_tabs">Enable icons</string>
-    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
-
-    <string name="pref_title_airspeck_app_access">Acceso a AirSpeck</string>
-    <string name="pref_description_airspeck_app_access">Habilitar AirSpeck App</string>
-
-    <string name="pref_title_respeck_app_access">Acceso a RESpeck</string>
-    <string name="pref_description_respeck_app_access">Habilitar RESpeck App</string>
-
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Datos &amp; sincronización</string>
+    <!-- Strings related to Data & Sync Settings -->
+    <string name="pref_category_ui_advanced">Avanzado</string>
 
     <string name="pref_title_sync_frequency">Frecuencia de sincronización</string>
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+        <item>15 minutos</item>
+        <item>30 minutos</item>
+        <item>1 hora</item>
+        <item>3 horas</item>
+        <item>6 horas</item>
+        <item>Nunca</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
@@ -146,12 +167,5 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
-    <string name="readings_title">Datos en tiempo real</string>
-    <string name="pref_category_ui_advanced">Avanzado</string>
-    <string name="pref_category_ui_readings">Lecturas de calidad del aire</string>
 
-
-    <!-- Strings related to SegmentedBar -->
-    <string name="sb_empty">Vacío</string>
-    <string name="sb_value_segment">Valor actual</string>
 </resources>
