--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -2,11 +2,47 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
+
+    <!-- Strings related to Initial Setup -->
+    <string name="new_user_title">उपयोगकर्ता विवरण</string>
+    <string name="new_user_register">रजिस्टर</string>
+    <string name="new_user_empty_fields">क्षेत्र को पूरा करना चाहिए</string>
+    <string name="no_network">कोई इंटरनेट कनेक्शन नहीं</string>
+
+    <string name="new_user_first_name">पहला नाम</string>
+    <string name="new_user_last_name">अंतिम नाम</string>
+    <string name="new_user_birth_date">जन्म दिन</string>
+    <string name="new_user_gender">लिंग</string>
+    <string-array name="new_user_gender_list">
+        <item>नर</item>
+        <item>महिला</item>
+    </string-array>
+    <string-array name="new_user_gender_list_values">
+        <item>M</item>
+        <item>F</item>
+    </string-array>
+    <string name="new_user_illiterate">निरक्षर</string>
+    <string name="new_user_usertype">इस्तेमाल करने वाले का प्रकार</string>
+    <string-array name="new_user_usertype_list">
+        <item>विषय</item>
+        <item>शोधकर्ता</item>
+    </string-array>
+    <string-array name="new_user_usertype_list_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+
+    <!-- Strings related to SegmentedBar -->
+    <string name="sb_empty">खाली</string>
+    <string name="sb_value_segment">वर्तमान मूल्य</string>
+
+
     <!-- Strings related to Readings -->
     <string name="readings_title">सजीव आंकड़ा</string>
 
     <!-- Readings -->
-    <string name="reading_no_data">No data available</string>
+    <string name="reading_no_data">कोई डेटा उपलब्ध नहीं है</string>
 
     <string name="reading_respiratory_rate">श्वसन दर</string>
     <string name="reading_pm10">PM 10</string>
@@ -28,7 +64,6 @@
 
     <!-- Button/tabs menu -->
     <string name="menu_home">घर</string>
-    <string name="menu_health">स्वास्थ्य</string>
     <string name="menu_air_quality">हवा की गुणवत्ता</string>
     <string name="menu_graphs">रेखांकन</string>
     <string name="menu_settings">सेटिंग्स</string>
@@ -37,6 +72,7 @@
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
     <string name="action_settings">सेटिंग्स</string>
+    <string name="action_user_profile">प्रोफाइल</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
@@ -47,45 +83,7 @@
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">सेटिंग्स</string>
 
-    <!-- Personal Data settings -->
-    <string name="pref_header_personal_data">व्यक्तिगत डेटा</string>
-
-    <string name="pref_title_display_name">नाम</string>
-    <string name="pref_default_display_name">उपयोगकर्ता</string>
-
-    <string name="pref_title_birth_date">जन्म की तारीख</string>
-    <string name="pref_default_birth_date">1991.01.01</string>
-
-    <string name="pref_title_gender">लिंग</string>
-    <string-array name="pref_gender_list">
-        <item>नर</item>
-        <item>महिला</item>
-    </string-array>
-    <string-array name="pref_gender_list_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-
-    <string name="pref_title_region">क्षेत्र</string>
-    <string-array name="pref_region_list">
-        <item>Africa</item>
-        <item>Asia</item>
-        <item>Europe</item>
-        <item>Latin America</item>
-        <item>North America</item>
-    </string-array>
-    <string-array name="pref_region_list_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-    </string-array>
-
-
-    <!-- Example settings for User Interface -->
-    <string name="pref_header_ui">प्रयोक्ता इंटरफ़ेस</string>
-
+    <!-- Strings related to General Settings -->
     <string name="pref_category_ui_general">सामान्य</string>
 
     <string name="pref_title_font_size">फ़ॉन्ट आकार</string>
@@ -102,42 +100,64 @@
         <item>3</item>
     </string-array>
 
-    <string name="pref_title_readings_display_mode">रीडिंग प्रदर्शन मोड</string>
-    <string-array name="pref_readings_display_mode_list">
+    <!-- Strings related to Menu Settings -->
+    <string name="pref_category_ui_menu">Menus</string>
+
+    <string name="pref_title_menu_mode">Menu mode</string>
+    <string-array name="pref_menu_mode_list">
+        <item>Buttons</item>
+        <item>Tabs</item>
+    </string-array>
+    <string-array name="pref_menu_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_icons_in_tabs">माउस को सक्रिय करें</string>
+    <string name="pref_description_icons_in_tabs">टैब में प्रतीक दिखाएँ</string>
+
+    <string name="pref_title_airspeck_app_access">AirSpeck</string>
+    <string name="pref_description_airspeck_app_access">AirSpeck अनुप्रयोग के लिए पहुँच सक्षम</string>
+
+    <string name="pref_title_respeck_app_access">RESpeck</string>
+    <string name="pref_description_respeck_app_access">RESpeck अनुप्रयोग के लिए पहुँच सक्षम</string>
+
+    <!-- Strings related to Readings Settings -->
+    <string name="pref_category_ui_readings">हवा की गुणवत्ता रीडिंग</string>
+
+    <string name="pref_title_readings_mode_home_screen">घर स्क्रीन में प्रदर्शन मोड</string>
+    <string-array name="pref_readings_mode_home_screen_list">
+        <item>सूची</item>
+        <item>ग्राफिक: बार</item>
+    </string-array>
+    <string-array name="pref_readings_mode_home_screen_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_readings_mode_aqreadings_screen">हवा की गुणवत्ता स्क्रीन में प्रदर्शन मोड</string>
+    <string-array name="pref_readings_mode_aqreadings_screen_list">
         <item>सूची</item>
         <item>ग्राफिक: बार</item>
         <item>ग्राफिक: चाप</item>
     </string-array>
-    <string-array name="pref_readings_display_mode_list_values">
+    <string-array name="pref_readings_mode_aqreadings_screen_list_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
 
-    <string name="pref_title_main_menu_layout">उन्नत मुख्य मेनू लेआउट</string>
-    <string name="pref_description_main_menu_layout">टैब मेनू सक्षम</string>
-
-    <string name="pref_title_icons_in_tabs">Enable icons</string>
-    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
-
-    <string name="pref_title_airspeck_app_access">AirSpeck पहुँच</string>
-    <string name="pref_description_airspeck_app_access">AirSpeck ऐप्स सक्षम</string>
-
-    <string name="pref_title_respeck_app_access">RESpeck पहुँच</string>
-    <string name="pref_description_respeck_app_access">RESpeck ऐप्स सक्षम</string>
-
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">डेटा और सिंक</string>
+    <!-- Strings related to Data & Sync Settings -->
+    <string name="pref_category_ui_advanced">उन्नत</string>
 
     <string name="pref_title_sync_frequency">सिंक आवृत्ति</string>
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+        <item>15 मिनटों</item>
+        <item>30 मिनटों</item>
+        <item>1 समय</item>
+        <item>3 घंटे</item>
+        <item>6 घंटे</item>
+        <item>कभी नहीँ</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
@@ -147,11 +167,5 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
-    <string name="pref_category_ui_advanced">उन्नत</string>
-    <string name="pref_category_ui_readings">हवा की गुणवत्ता रीडिंग</string>
 
-
-    <!-- Strings related to SegmentedBar -->
-    <string name="sb_empty">खाली</string>
-    <string name="sb_value_segment">वर्तमान मूल्य</string>
 </resources>
