--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,10 +2,47 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
+
+    <!-- Strings related to Initial Setup -->
+    <string name="new_user_title">用户详细信息</string>
+    <string name="new_user_register">寄存器</string>
+    <string name="new_user_empty_fields">必须完成所有领域</string>
+    <string name="no_network">没有网络连接</string>
+
+    <string name="new_user_first_name">名字</string>
+    <string name="new_user_last_name">姓</string>
+    <string name="new_user_birth_date">生日</string>
+    <string name="new_user_gender">性别</string>
+    <string-array name="new_user_gender_list">
+        <item>男</item>
+        <item>女</item>
+    </string-array>
+    <string-array name="new_user_gender_list_values">
+        <item>M</item>
+        <item>F</item>
+    </string-array>
+    <string name="new_user_illiterate">文盲</string>
+    <string name="new_user_usertype">用户类型</string>
+    <string-array name="new_user_usertype_list">
+        <item>学科</item>
+        <item>研究员</item>
+    </string-array>
+    <string-array name="new_user_usertype_list_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+
+    <!-- Strings related to SegmentedBar -->
+    <string name="sb_empty">空</string>
+    <string name="sb_value_segment">当前值</string>
+
+
     <!-- Strings related to Readings -->
+    <string name="readings_title">实时数据</string>
 
     <!-- Readings -->
-    <string name="reading_no_data">No data available</string>
+    <string name="reading_no_data">无可用数据</string>
 
     <string name="reading_respiratory_rate">呼吸频率</string>
     <string name="reading_pm10">PM 10</string>
@@ -27,7 +64,6 @@
 
     <!-- Button/tabs menu -->
     <string name="menu_home">首页</string>
-    <string name="menu_health">健康</string>
     <string name="menu_air_quality">空气质量</string>
     <string name="menu_graphs">图的</string>
     <string name="menu_settings">设置</string>
@@ -35,7 +71,8 @@
     <!-- Action Bar menu -->
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
-    <string name="action_settings">设置的</string>
+    <string name="action_settings">设置</string>
+    <string name="action_user_profile">轮廓</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
@@ -46,45 +83,7 @@
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">设置的</string>
 
-    <!-- Personal Data settings -->
-    <string name="pref_header_personal_data">个人资料</string>
-
-    <string name="pref_title_display_name">名称</string>
-    <string name="pref_default_display_name">用户</string>
-
-    <string name="pref_title_birth_date">出生日期</string>
-    <string name="pref_default_birth_date">1991.01.01</string>
-
-    <string name="pref_title_gender">性别</string>
-    <string-array name="pref_gender_list">
-        <item>男</item>
-        <item>女</item>
-    </string-array>
-    <string-array name="pref_gender_list_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-
-    <string name="pref_title_region">地区</string>
-    <string-array name="pref_region_list">
-        <item>Africa</item>
-        <item>Asia</item>
-        <item>Europe</item>
-        <item>Latin America</item>
-        <item>North America</item>
-    </string-array>
-    <string-array name="pref_region_list_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-    </string-array>
-
-
-    <!-- Example settings for User Interface -->
-    <string name="pref_header_ui">用户界面</string>
-
+    <!-- Strings related to General Settings -->
     <string name="pref_category_ui_general">一般</string>
 
     <string name="pref_title_font_size">字体大小</string>
@@ -101,42 +100,64 @@
         <item>3</item>
     </string-array>
 
-    <string name="pref_title_readings_display_mode">读数显示模式</string>
+    <!-- Strings related to Menu Settings -->
+    <string name="pref_category_ui_menu">菜单</string>
+
+    <string name="pref_title_menu_mode">菜单模式</string>
+    <string-array name="pref_menu_mode_list">
+        <item>纽扣</item>
+        <item>标签</item>
+    </string-array>
+    <string-array name="pref_menu_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_icons_in_tabs">启用图标</string>
+    <string name="pref_description_icons_in_tabs">在标签中显示图标</string>
+
+    <string name="pref_title_airspeck_app_access">AirSpeck</string>
+    <string name="pref_description_airspeck_app_access">启用访问AirSpeck应用</string>
+
+    <string name="pref_title_respeck_app_access">RESpeck</string>
+    <string name="pref_description_respeck_app_access">启用访问RESpeck应用</string>
+
+    <!-- Strings related to Readings Settings -->
+    <string name="pref_category_ui_readings">空气质量读数</string>
+
+    <string name="pref_title_readings_display_mode">在主屏幕显示模式</string>
     <string-array name="pref_readings_display_mode_list">
+        <item>名单</item>
+        <item>图文：酒吧</item>
+    </string-array>
+    <string-array name="pref_readings_display_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_readings_mode_aqreadings_screen">在空气质量屏显示模式</string>
+    <string-array name="pref_readings_mode_aqreadings_screen_list">
         <item>名单</item>
         <item>图文：酒吧</item>
         <item>图文：圆弧</item>
     </string-array>
-    <string-array name="pref_readings_display_mode_list_values">
+    <string-array name="pref_readings_mode_aqreadings_screen_list_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
 
-    <string name="pref_title_main_menu_layout">先进的主菜单布局</string>
-    <string name="pref_description_main_menu_layout">启用选项卡菜单</string>
-
-    <string name="pref_title_icons_in_tabs">Enable icons</string>
-    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
-
-    <string name="pref_title_airspeck_app_access">AirSpeck 访问</string>
-    <string name="pref_description_airspeck_app_access">启用 AirSpeck 应用</string>
-
-    <string name="pref_title_respeck_app_access">RESpeck 访问</string>
-    <string name="pref_description_respeck_app_access">启用 RESpeck 应用</string>
-
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">数据与同步</string>
+    <!-- Strings related to Data & Sync Settings -->
+    <string name="pref_category_ui_advanced">高级</string>
 
     <string name="pref_title_sync_frequency">同步频率</string>
     <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
+        <item>15 分钟</item>
+        <item>30 分钟</item>
+        <item>1 小时</item>
+        <item>3 小时</item>
+        <item>6 小时</item>
+        <item>决不</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>15</item>
@@ -146,12 +167,5 @@
         <item>360</item>
         <item>-1</item>
     </string-array>
-    <string name="readings_title">实时数据</string>
-    <string name="pref_category_ui_advanced">高级</string>
-    <string name="pref_category_ui_readings">空气质量读数</string>
 
-
-    <!-- Strings related to SegmentedBar -->
-    <string name="sb_empty">空</string>
-    <string name="sb_value_segment">当前值</string>
 </resources>
