--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,59 @@
 <resources>
     <string name="app_name">AirRespeck</string>
 
+
+    <!-- Strings related to Initial Setup -->
+    <string name="new_user_title">User details</string>
+    <string name="new_user_register">Register</string>
+    <string name="new_user_empty_fields">Must complete all fields</string>
+    <string name="no_network">No Internet connection</string>
+
+    <string name="new_user_first_name">First name</string>
+    <string name="new_user_last_name">Last name</string>
+    <string name="new_user_birth_date">Birth date</string>
+    <string name="new_user_gender">Gender</string>
+    <string-array name="new_user_gender_list">
+        <item>Male</item>
+        <item>Female</item>
+    </string-array>
+    <string-array name="new_user_gender_list_values">
+        <item>M</item>
+        <item>F</item>
+    </string-array>
+    <string name="new_user_illiterate">Illiterate</string>
+    <string name="new_user_usertype">User type</string>
+    <string-array name="new_user_usertype_list">
+        <item>Subject</item>
+        <item>Researcher</item>
+    </string-array>
+    <string-array name="new_user_usertype_list_values">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+
+    <!-- Strings related to User Profile -->
+    <string name="title_activity_user_profile">User Profile</string>
+
+
+    <!-- Strings related to SegmentedBar -->
+    <string name="sb_empty">Empty</string>
+    <string name="sb_value_segment">Current value</string>
+
+
     <!-- Strings related to Readings -->
-    <string name="readings_title">Live Data</string>
+    <string name="readings_title">Live data</string>
 
     <!-- Readings -->
     <string name="reading_no_data">No data available</string>
 
-    <string name="reading_respiratory_rate">Respiratory Rate</string>
+    <string name="reading_respiratory_rate">Respiratory rate</string>
     <string name="reading_pm10">PM 10</string>
     <string name="reading_pm2_5">PM 2.5</string>
 
     <string name="reading_pm1_0">PM 1.0</string>
     <string name="reading_temp">Temperature</string>
-    <string name="reading_rel_humidity"> Humidity</string>
+    <string name="reading_rel_humidity">Humidity</string>
     <string name="reading_o3">O3</string>
     <string name="reading_no2">NO2</string>
     <string name="reading_bins">Bins</string>
@@ -27,12 +67,10 @@
     <string name="reading_unit_percent" translatable="false">%</string>
 
 
-
     <!-- Strings related to Menus -->
 
     <!-- Button/tabs menu -->
     <string name="menu_home">HOME</string>
-    <string name="menu_health">HEALTH</string>
     <string name="menu_air_quality">AIR QUALITY</string>
     <string name="menu_graphs">GRAPHS</string>
     <string name="menu_settings">SETTINGS</string>
@@ -41,6 +79,7 @@
     <string name="action_air_speck">AirSpeck</string>
     <string name="action_re_speck">RESpeck</string>
     <string name="action_settings">Settings</string>
+    <string name="action_user_profile">Profile</string>
 
 
     <!-- Strings related to AirSpeck and RESpeck apps -->
@@ -51,48 +90,10 @@
     <!-- Strings related to Settings -->
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Personal Data settings -->
-    <string name="pref_header_personal_data">Personal data</string>
-
-    <string name="pref_title_display_name">Name</string>
-    <string name="pref_default_display_name">User</string>
-
-    <string name="pref_title_birth_date">Date of birth</string>
-    <string name="pref_default_birth_date">1991.01.01</string>
-
-    <string name="pref_title_gender">Gender</string>
-    <string-array name="pref_gender_list">
-        <item>Male</item>
-        <item>Female</item>
-    </string-array>
-    <string-array name="pref_gender_list_values">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-
-    <string name="pref_title_region">Region</string>
-    <string-array name="pref_region_list">
-        <item>Africa</item>
-        <item>Asia</item>
-        <item>Europe</item>
-        <item>Latin America</item>
-        <item>North America</item>
-    </string-array>
-    <string-array name="pref_region_list_values">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-    </string-array>
-
-
-    <!-- Example settings for User Interface -->
-    <string name="pref_header_ui">User interface</string>
-
+    <!-- Strings related to General Settings -->
     <string name="pref_category_ui_general">General</string>
 
-    <string name="pref_title_font_size">Font Size</string>
+    <string name="pref_title_font_size">Font size</string>
     <string-array name="pref_font_size_list">
         <item>Small</item>
         <item>Normal</item>
@@ -106,37 +107,55 @@
         <item>3</item>
     </string-array>
 
+    <!-- Strings related to Menu Settings -->
+    <string name="pref_category_ui_menu">Menus</string>
+
+    <string name="pref_title_menu_mode">Menu mode</string>
+    <string-array name="pref_menu_mode_list">
+        <item>Buttons</item>
+        <item>Tabs</item>
+    </string-array>
+    <string-array name="pref_menu_mode_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_menu_tab_icons">Enable icons</string>
+    <string name="pref_description_menu_tab_icons">Show icons in tabs</string>
+
+    <string name="pref_title_airspeck_app_access">AirSpeck</string>
+    <string name="pref_description_airspeck_app_access">Enable access to AirSpeck App</string>
+
+    <string name="pref_title_respeck_app_access">RESpeck</string>
+    <string name="pref_description_respeck_app_access">Enable access to RESpeck App</string>
+
+    <!-- Strings related to Readings Settings -->
     <string name="pref_category_ui_readings">Air quality readings</string>
 
-    <string name="pref_title_readings_display_mode">Readings Display Mode</string>
-    <string-array name="pref_readings_display_mode_list">
+    <string name="pref_title_readings_mode_home_screen">Display mode in home screen</string>
+    <string-array name="pref_readings_mode_home_screen_list">
+        <item>List</item>
+        <item>Graphic: Bar</item>
+    </string-array>
+    <string-array name="pref_readings_mode_home_screen_list_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string name="pref_title_readings_mode_aqreadings_screen">Display mode in air quality screen</string>
+    <string-array name="pref_readings_mode_aqreadings_screen_list">
         <item>List</item>
         <item>Graphic: Bar</item>
         <item>Graphic: Arc</item>
     </string-array>
-    <string-array name="pref_readings_display_mode_list_values">
+    <string-array name="pref_readings_mode_aqreadings_screen_list_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
 
+    <!-- Strings related to Data & Sync Settings -->
     <string name="pref_category_ui_advanced">Advanced</string>
-
-    <string name="pref_title_main_menu_layout">Advanced main menu layout</string>
-    <string name="pref_description_main_menu_layout">Enable tabbed menu</string>
-
-    <string name="pref_title_icons_in_tabs">Enable icons</string>
-    <string name="pref_description_icons_in_tabs">Show icons in tabs</string>
-
-    <string name="pref_title_airspeck_app_access">AirSpeck access</string>
-    <string name="pref_description_airspeck_app_access">Enable AirSpeck App</string>
-
-    <string name="pref_title_respeck_app_access">RESpeck access</string>
-    <string name="pref_description_respeck_app_access">Enable RESpeck App</string>
-
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
@@ -156,8 +175,4 @@
         <item>-1</item>
     </string-array>
 
-
-    <!-- Strings related to SegmentedBar -->
-    <string name="sb_empty">Empty</string>
-    <string name="sb_value_segment">Current Value</string>
 </resources>
